--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="row">
         <div>
-          <h3><a href="asgn0/src/asg0.html">ASSIGNMENT 0</a></h3>
+          <h3><a href="ASG0/src/asg0.html">ASSIGNMENT 0</a></h3>
           <p>Extend the matrix library provided by the textbook to support vector operations such as addition, subtraction, multiplication, cross product, dot product, etc.</p>
         </div>
 
